Mon Nov 11 09:17:34 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.2.3 released.

Wed Oct 23 08:45:46 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>

        * dance/LocalityManager/Scheduler/Events/Action_Base.cpp:
        * dance/LocalityManager/Scheduler/Plugin_Manager.cpp:
        commit eb9626a86511c55e5d46a65a260240af6103f8e4
        Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
        Date:   Thu Oct 3 10:19:06 2013 +0200

                Solved singleton problems for android
                * DAnCE/dance/LocalityManager/Scheduler/Plugin_Manager.cpp:

                * DAnCE/dance/LocalityManager/Scheduler/Events/Action_Base.cpp:
                If InstanceDeploymentHandler is nil, don't call invoke

Thu Oct  3 09:36:51 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepared for next release

Thu Oct 03 09:47:23 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.2.2 released.

Fri Aug 16 08:36:29 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * ChangeLogs/ChangeLog-2013a:
        * NEWS:
          Prepared for next release

Fri Aug 16 08:56:17 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.2.1 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: