@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN DAnCE-1.2.3 and DAnCE-1.2.4
+=======================================================
+
 USER VISIBLE CHANGES BETWEEN DAnCE-1.2.2 and DAnCE-1.2.3
 =======================================================
 
